update-manager (1:0.120) karmic; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - do not fail in partial upgrades if apport must be
      enabled (LP: #357755)
    - when rewriting sources.list, check for cdrom entries
      that do not have associated list files and disable
      them (LP: #366459)
  * DistUpgrade/xorg_fix_proprietary.py:
    - instead of replacing fglrx->ati and nvidia->nv just
      comment out the driver and let xorg figure it out
      with its own magic (LP: #351394)
    - update tests/ for the change
  * UpdateManager/UpdateManager.py:
    - use a gtk link button to point the user to further
      upgrade information
  * DistUpgrade/DistUpgradeController.py:
    - ensure ./imported/invoke-rc.d is executable (LP: #147742)
  * refactor the quirks handlers and not run them in partial
    upgrade mode

 --

update-manager (1:0.111.8) jaunty-proposed; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - add "grub" to the list of packages to keep installed
      (LP: #363465)
    - ensure brasero is upgraded (thanks to Chris Jones for
      the report) (LP: #364136)
  * DistUpgrade/DistUpgradeCache.py:
    - support DistUpgradeCache.markUpgrade()
  * DistUpgrade/mirrors.cfg:
    - add "mirror.files.bigpond.com" (thanks to wgrant)
  * debian/control:
    - build-depend on latest nvidia-common (LP: #363500) to ensure
      the nvidia-common if is included in the internal copy of
      u-m
  * DistUpgrade/DistUpgradeQuirks.py:
    - when the upgrade starts, remove old hal.postinst to prevent
      the trigger from running that causes network-manager to shutdown
      all connections (LP: #327053)
  * UpdateManager/Core/MetaRelease.py, UpdateManager/MetaReleaseGObject.py:
    - fix "no longer supported" message (LP: #364583)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Apr 2009 13:53:01 +0200

update-manager (1:0.111.7) jaunty; urgency=low

  * DistUpgrade/ReleaseAnnouncement:
    - updated for the final release