@@ -26,6 +26,7 @@ Components=main,restricted,universe,multiverse
 Packages=release-upgrader-apt,release-upgrader-dpkg
 SourcesList=prerequists-sources.dapper.list
 
+[Aufs]
 
 [Network]
 MaxRetries=3
