@@ -1,6 +1,6 @@
 
 # main repo
-deb http://old-releases.ubuntu.com/ubuntu feisty main restricted multiverse universe
-deb-src http://old-releases.ubuntu.com/ubuntu feisty main restricted multiverse
+deb http://old-releases.ubuntu.com/ubuntu gutsy main restricted multiverse universe
+deb-src http://old-releases.ubuntu.com/ubuntu gutsy main restricted multiverse
 
-deb http://old-releases.ubuntu.com/ubuntu feisty-security main restricted
+deb http://old-releases.ubuntu.com/ubuntu gutsy-security main restricted
