@@ -1,0 +1,15 @@
+
+deb http://localhost:9977/security.ubuntu.com/ubuntu feisty-security main restricted 
+deb http://localhost:9977/archive.canonical.com/ubuntu feisty partner
+deb http://localhost:9977/us.archive.ubuntu.com/ubuntu/ feisty main
+deb http://localhost:9977/archive.ubuntu.com/ubuntu/ feisty main
+
+# main repo
+deb http://archive.ubuntu.com/ubuntu/ feisty main restricted multiverse universe
+deb http://de.archive.ubuntu.com/ubuntu/ feisty main restricted multiverse
+deb-src http://archive.ubuntu.com/ubuntu/ feisty main restricted multiverse
+
+deb http://security.ubuntu.com/ubuntu/ feisty-security main restricted
+deb http://security.ubuntu.com/ubuntu/ feisty-security universe
+
+deb http://archive.canonical.com/ubuntu feisty partner
