@@ -6,6 +6,8 @@ update-manager (1:0.120) karmic; urgency=low
     - when rewriting sources.list, check for cdrom entries
       that do not have associated list files and disable
       them (LP: #366459)
+    - when rewriting sources.list, deal better with apt-cacher
+      apt-torrent style uris (LP: #365537)
   * DistUpgrade/xorg_fix_proprietary.py:
     - instead of replacing fglrx->ati and nvidia->nv just
       comment out the driver and let xorg figure it out
@@ -18,6 +20,8 @@ update-manager (1:0.120) karmic; urgency=low
     - ensure ./imported/invoke-rc.d is executable (LP: #147742)
   * refactor the quirks handlers and not run them in partial
     upgrade mode
+  * tests/test_sources_list.py:
+    - update tests for apt-torrent style uris (LP: #365537)
 
  --
 
